syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/VadimGossip/consoleChat-chat-server/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendRequest) returns (google.protobuf.Empty);
}

message CreateRequest {
  string name = 1;
  repeated User users = 2;
}

message CreateResponse {
  int64 id = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message User {
  int64 id = 1;
  string name = 2;
}
message ChatMessage {
  User user = 1;
  string text = 2;
  google.protobuf.Timestamp created_at = 3;
}

message SendRequest {
  int64 id = 1;
  ChatMessage message = 2;
}